go-server-rpc-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-user-rpc
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: go-user-rpc
  name: go-user-rpc
  namespace: go-user-rpc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-user-rpc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: go-user-rpc
    spec:
      containers:
      - args: ["./main"]
        image: xjyplayer/go-user-rpc:1.0.1
        imagePullPolicy: IfNotPresent
        name: go-user-rpc
        ports:
        - containerPort: 8888
        resources: {}
        volumeMounts:
        - mountPath: /apps/go_user_rpc
          subPath: go_user_rpc
          name: go-user-rpc-pvc
        - mountPath: /apps/log
          subPath: log
          name: go-user-rpc-pvc
        - mountPath: /apps/go_user
          subPath: go_user
          name: go-user-rpc-pvc
        workingDir: /apps/go_user_rpc
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: go-user-rpc-pvc
        persistentVolumeClaim:
          claimName: app-pvc-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: go-user-rpc
  name: go-user-rpc
spec:
  type: NodePort
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
#      nodePort: 32000
  selector:
    io.kompose.service: go-user-rpc
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  go-user-rpc-gw
  namespace: go-user-rpc
  labels:
    app: go-user-rpc
    io.kompose.service: go-user-rpc
spec:
  selector:
    app: go-user-rpc
    io.kompose.service: go-user-rpc
  servers:
    - hosts:
      - go.user.rpc.k8s.show
      port:
        number: 8888
        name: go-user-rpc
        targetPort: 8888
        protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-user-rpc-dr
spec:
  host: go-user-rpc.go-user-rpc.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-user-rpc-vs
spec:
  hosts:
    - go.user.rpc.k8s.show
  tcp:
    - match:
        - port: 8888
      route:
        - destination:
            host: go-user-rpc.go-user-rpc.svc.cluster.local
            port:
              number: 8888
